Fix Java 8 compilation